# ontoverse-kg-choreographer

./: .env.example  .gitignore  AUTHORS.md  CONTRIBUTING.md  NEWS.md  README.md  pyproject.toml  tox.ini
config/: params_ontoverse.yaml
pipeline_data/: README.md
scripts/: compare_annotations.py  generate_dumps.sh  generate_ontoverse.sh
src/: setup_logger.py
src/kgs_rnd_ontoverse/: ontoverseCreate.py  paperNER.py  paperSimilarity.py  utils.py
src/kgs_rnd_ontoverse/utils/: kg_db.py  kg_db_queries.py  models.py  networkx.py  zotero.py  zotero_queries.py
