[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoverse-kg-choreographer"
version = "1.0.0"
description = "Pipeline for assembling the knowledge graph nurturing the ontoverse-app"
authors = [
    {name = "Johannes Zimmermann", email = "johannes.zimmermann@astrazeneca.com"},
    {name = "Ian Simpson", email = "ian.simpson@ed.ac.uk"},
    {name = "Laura López-Real", email = "laura.lopezreal@astrazeneca.com"},
    {name = "Miquel Monge Dalmau", email = "miquel.mongedalmau@astrazeneca.com"},
    {name = "Thomas Meusburger"},
    {name = "Dariusz Wiktorek"},
    {name = "Georgios Georgiokas", email = "georgios.gerogiokas1@alexion.com"},
    {name = "Clara Bai", email = "clara.bai@alexion.com"},
    {name = "Gunter Schmidt", email = "gunter.schmidt@astrazeneca.com"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas>=2.2.3",
    "tqdm>=4.66.5",
    "networkx>=3.4.1",
    "python-dotenv>=1.0.1",
    "spacy>=3.6",
    "neomodel>=5.3.3",
    "py2neo>=2021.2.4",
    "scispacy>=0.5.5",
    "numpy>=1.0.0",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "en-core-sci-scibert @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_scibert-0.5.4.tar.gz#sha256=be4afaa2710d63206fafa7864001acbfab1225800bbab577f32765435e29b7f2",
    "en-ner-bc5cdr-md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_bc5cdr_md-0.5.4.tar.gz#sha256=ffc73130a710edf851206199720cb2c744a043e032f5da6ba4bb36863deca778",
    "en-ner-bionlp13cg-md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_bionlp13cg_md-0.5.4.tar.gz#sha256=d747ec2b3871d7f9187d4f4769e3f7014a48e804b01c18e3da9991a67024eae1",
    "en-ner-craft-md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_craft_md-0.5.4.tar.gz#sha256=63ddbc8320c968e419148e4c10dad595cc601aadc6f35187a1340d147f706ab7",
    "en-ner-jnlpba-md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_jnlpba_md-0.5.4.tar.gz#sha256=9a6f59629c1aa0d43643d3e0f786016766149b2ef622d4d7a08808c4a6d9cb11",
]
readme = "readme.md"

[project.urls]
Homepage = "https://github.com/azu-oncology-rd/ontoverse-kg-choreographer"
Download = "https://github.com/azu-oncology-rd/ontoverse-kg-choreographer/releases"
"Bug Tracker" = "https://github.com/azu-oncology-rd/ontoverse-kg-choreographer/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kgs_rnd_ontoverse*", "setup_logger"]

[tool.setuptools]
py-modules = []

[tool.ruff]
exclude = ["*.ipynb"]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"

[tool.ruff.format]
skip-magic-trailing-comma = false
quote-style = "double"
indent-style = "tab"